--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -162,4 +162,9 @@
 :: ROBOCOPY "$(TargetDir) " "$(TargetDir)lib\ " /XF *.exe *.config *.manifest /XD lib logs data /E /IS /MOVE
 :: if %25errorlevel%25 leq 4 exit 0 else exit %25errorlevel%25</PostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>del LICENSE NOTICE CommandLineParserLicense RawFileReaderLicense SerilogLicense
+ROBOCOPY "$(SolutionDir) " "$(TargetDir) " LICENSE NOTICE CommandLineParserLicense RawFileReaderLicense SerilogLicense
+exit 0</PreBuildEvent>
+  </PropertyGroup>
 </Project>
