--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -147,6 +147,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ThermoFisher.CommonCore.BackgroundSubtraction.xml" />
+    <Content Include="ThermoFisher.CommonCore.Data.xml" />
+    <Content Include="ThermoFisher.CommonCore.MassPrecisionEstimator.xml" />
+    <Content Include="ThermoFisher.CommonCore.RawFileReader.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
