--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -162,7 +162,8 @@
   <PropertyGroup>
     <PostBuildEvent>::; Move all assemblies and related files to lib folder
 :: ROBOCOPY "$(TargetDir) " "$(TargetDir)lib\ " /XF *.exe *.config *.manifest /XD lib logs data /E /IS /MOVE
-:: if %25errorlevel%25 leq 4 exit 0 else exit %25errorlevel%25</PostBuildEvent>
+:: if %25errorlevel%25 leq 4 exit 0 else exit %25errorlevel%25
+del *.xml</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>del LICENSE NOTICE CommandLineParserLicense RawFileReaderLicense SerilogLicense
