--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -116,6 +116,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="QC\FastaManipulation.cs" />
     <Compile Include="QC\Identipy.cs" />
     <Compile Include="QC\RunSearch.cs" />
     <Compile Include="QC\SearchQC.cs" />
