--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -71,6 +71,9 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="alglibnet2">
+      <HintPath>..\..\..\..\..\..\..\NuGet\AlgLib\net-core\alglibnet2.dll</HintPath>
+    </Reference>
     <Reference Include="CommandLine, Version=2.2.1.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandLineParser.2.2.1\lib\net45\CommandLine.dll</HintPath>
     </Reference>
@@ -108,6 +111,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\Averagine.cs" />
+    <Compile Include="Algorithms\ChargeStateCalculator.cs" />
+    <Compile Include="Algorithms\PattersonChargeStateCalculator.cs" />
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="Data\Collections.cs" />
     <Compile Include="Data\Processing.cs" />
