--- a/RawTools/packages.config
+++ b/RawTools/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="alglib2.dll" version="3.10.4" targetFramework="net462" />
   <package id="CommandLineParser" version="2.2.1" targetFramework="net471" />
   <package id="Serilog" version="2.7.1" targetFramework="net471" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
