--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -108,15 +108,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\AnalyzePeaks.cs" />
     <Compile Include="Algorithms\Averagine.cs" />
     <Compile Include="Algorithms\ChargeStateCalculator.cs" />
     <Compile Include="Algorithms\IsoProfilePredictor.cs" />
     <Compile Include="Algorithms\IsotopomerEnvelope.cs" />
+    <Compile Include="Algorithms\MetaDataProcessing.cs" />
     <Compile Include="Algorithms\MonoIsoPredictor.cs" />
+    <Compile Include="Algorithms\Ms1Interference.cs" />
+    <Compile Include="Algorithms\QuantifyAllScans.cs" />
+    <Compile Include="Algorithms\QuantifyReporters.cs" />
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="Data\Collections.cs" />
-    <Compile Include="Data\Processing.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -165,7 +169,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\XTandem_default_config.xml" />
+    <Content Include="Resources\XTandem_default_config.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Resources\XTandem_custom_config.xml" />
     <None Include="Resources\XTandem_taxonomy.xml" />
   </ItemGroup>
