--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -109,8 +109,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\AnalyzePeaks.cs" />
+    <Compile Include="Algorithms\Analyze\MetaDataProcessing.cs" />
+    <Compile Include="Algorithms\Analyze\MetaData\MetaData.cs" />
     <Compile Include="Algorithms\Averagine.cs" />
     <Compile Include="Algorithms\ChargeStateCalculator.cs" />
+    <Compile Include="Algorithms\Extraction\ExtractData.cs" />
     <Compile Include="Algorithms\IsoProfilePredictor.cs" />
     <Compile Include="Algorithms\IsotopomerEnvelope.cs" />
     <Compile Include="Algorithms\MetaDataProcessing.cs" />
@@ -121,6 +124,7 @@
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="Data\Collections.cs" />
+    <Compile Include="Data\TestContainers.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -135,6 +139,8 @@
     <Compile Include="QC\XTandem.cs" />
     <Compile Include="Utilities\MathStats\FitScores.cs" />
     <Compile Include="Utilities\MathStats\ToleranceCalculator.cs" />
+    <Compile Include="WorkFlows\DDA.cs" />
+    <Compile Include="WorkFlows\WorkflowParameters.cs" />
     <Compile Include="Write\DataWrite.cs" />
     <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="Data\Containers.cs" />
@@ -181,6 +187,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
