--- a/RawTools/packages.config
+++ b/RawTools/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.2.1" targetFramework="net471" />
+  <package id="MathNet.Numerics" version="4.6.0" targetFramework="net462" />
   <package id="Serilog" version="2.7.1" targetFramework="net471" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
