--- a/RawTools/App.config
+++ b/RawTools/App.config
@@ -8,5 +8,6 @@
       <probing privatePath="lib;libs"/>
       <probing privatePath="lib;libs" xmlns=""/>
     </assemblyBinding>
+    <loadFromRemoteSources enabled="true"/>
   </runtime>
 </configuration>
