add min/max charge, ms2 noise model

--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Algorithms\Analyze\MetaData\MetaDataProcessingDIA.cs" />
     <Compile Include="Algorithms\Analyze\Metrics\MetricsCalculations.cs" />
+    <Compile Include="Algorithms\Ms2NoiseModel.cs" />
     <Compile Include="Algorithms\PrecursorPeaks.cs" />
     <Compile Include="Algorithms\Analyze\MetaData\MetaDataProcessingDDA.cs" />
     <Compile Include="Algorithms\Analyze\MetaData\MetaDataCalculations.cs" />
