--- a/RawToolsGUI/RawToolsGUI.csproj
+++ b/RawToolsGUI/RawToolsGUI.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParametersContainer.cs" />
     <Compile Include="PeptideModificationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
