update workflow parameters to reflect new cl parser

--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Data\Extraction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Write\LogDump.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
