update visualizations, remove readkey event from workflow

--- a/RawToolsGUI/RawToolsGUI.csproj
+++ b/RawToolsGUI/RawToolsGUI.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ookii.Dialogs.WinForms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ookii.Dialogs.WinForms.1.0.0\lib\net45\Ookii.Dialogs.WinForms.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -60,6 +57,7 @@
     <Compile Include="AboutBox1.Designer.cs">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FolderBrowser.cs" />
     <Compile Include="ParametersContainer.cs" />
     <Compile Include="PeptideModificationWindow.cs">
       <SubType>Form</SubType>
