--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -73,9 +73,8 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CLParser, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>D:\Development\CLParser\CLParser\bin\Debug\netstandard2.0\CLParser.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="CLParserForNetFramework">
+      <HintPath>..\packages\CLParser\CLParserForNetFramework.dll</HintPath>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.2.7.1\lib\net46\Serilog.dll</HintPath>
