--- a/RawToolsViz/RawToolsViz.csproj
+++ b/RawToolsViz/RawToolsViz.csproj
@@ -160,6 +160,8 @@
       <Name>RawTools</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
