--- a/RawToolsViz/App.config
+++ b/RawToolsViz/App.config
@@ -1,6 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="OpenMcdf" publicKeyToken="fdbb1629d7c00800" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.1.4" newVersion="2.2.1.4" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
